--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,16 +1,15 @@
-
-
 nav{
 	position: absolute;
-	margin: 20px 20px;
+	margin: 15px 0;
 	top:0px;
+	border-bottom-style: ridge;
 }
 nav > ul > li{
 	line-height:30px;
-	margin-left: 30px;
-	float : left;
+	margin-left:20px;
+	float :left;
 	list-style-type: none;
-	text-indent: 35px;
+	text-indent: 30px;
 	text-align:center;
 }
 nav > ul > li > a{
@@ -22,7 +21,6 @@ nav > ul > li > a{
 	font-family: 'Open Sans',sans-serif;
 	outline: none;
 	display: inline-block;
-	margin: 5px;
 	color:black;
 	text-align:center;
 	border: 5px none ;
