--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,32 +1,56 @@
 nav{
-	position: absolute;
-	margin: 15px 0;
-	top:0px;
+	margin:15px 0;
 	border-bottom-style: ridge;
+	width:100%;
+	position: relative;
+  	display: inline-block;
 }
-nav > ul > li{
-	line-height:30px;
-	margin-left:20px;
+ .header-button{
+  	display: inline-block;
+ 	font-size:15px;
+	margin-left:30px;
 	float :left;
-	list-style-type: none;
-	text-indent: 30px;
-	text-align:center;
-}
-nav > ul > li > a{
 	cursor: pointer;
-	text-decoration:none;
+	border-radius: 15px ;
 	text-transform:uppercase;
-	font-size:15px;
 	font-weight: bold;
 	font-family: 'Open Sans',sans-serif;
-	outline: none;
-	display: inline-block;
-	color:black;
-	text-align:center;
-	border: 5px none ;
-	border-radius: 15px ;
+	border: none;
+	padding:6px 15px;
+	background: white;
 }
-nav > ul > li:hover > a {
+ .header-button:hover {
 	color:white;
 	background-color: #b07a23;
 }
+/*Dropdown*/
+#marketing-menu {
+	display: inline-block;
+	float:left;
+	position: relative;
+}
+#dropdown-content {
+  top: 1rem;
+  left: 351px;	
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+
+  }
+#dropdown-content a {
+  color: black;
+  display: inline-block;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+  text-align: left;
+}
+ #marketing-menu:hover + #dropdown-content {
+  display: block;
+}
+
